--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -5,6 +5,15 @@
     <title></title>
 </head>
 <body>
+{% if last_question_list %}
+    <ul>
+    {% for question in last_question_list %}
+    <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+    {% endfor %}
+    </ul>
 
+    {% else %}
+    <p>No Polls are available.</p>
+{% endif %}
 </body>
 </html>
