--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -5,10 +5,11 @@
     <title></title>
 </head>
 <body>
+
 {% if last_question_list %}
     <ul>
     {% for question in last_question_list %}
-    <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+    <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 
